fixed the collapse button and also added hr on top. YAY!

--- a/style.css
+++ b/style.css
@@ -18,9 +18,6 @@ body {
 .middle-pic {
   top: 35%;
 }
-.card{
-  visibility: hidden;
-}
 
 :root {
   height: 200%;
